docs(plans): add Phase 6 completion summary
- Mark Phase 6 as complete with all deliverables checked
- Add comprehensive completion summary with:
  - Virtual thread thumbnail fetcher (6.7-9.2x speedup)
  - Database indexes (16+ indexes)
  - WAL mode for concurrent reads
  - CDS archive generation script
  - ZGC configuration
- Include benchmark comparison (Phase 2 → Phase 6)
- Document test results (41 unit tests, 9 integration tests)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>